<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.standard.popularmoviestagetwoseggio.activities.MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:padding="8dp">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/title_tv"
            style="@style/DetailLayoutTextView"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textSize="36sp"
            android:textStyle="bold"
            autofit:minTextSize="24sp"
            tools:text="@string/titel_hint" />

        <LinearLayout
            android:id="@+id/date_rate_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_tv"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_tv"
                    style="@style/DetailLayoutTextView"
                    android:textSize="30sp"
                    tools:text="@string/tools_date" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@android:style/Widget.Holo.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:rating="2.5" />

                <TextView
                    android:id="@+id/rating_tv"
                    style="@style/DetailLayoutTextView"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    tools:text="@string/tools_rating" />

                <Button
                    android:id="@+id/favourite_btn"
                    style="@style/Button_Layout"
                    android:text="@string/btn_favourite" />

            </LinearLayout>

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>

        <TextView
            android:id="@+id/story_tv"
            style="@style/DetailLayoutTextView"
            android:layout_below="@+id/date_rate_image_layout"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textSize="22sp"
            tools:text="@string/tools_story" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/story_tv"
            android:orientation="horizontal">

            <Button
                android:id="@+id/trailer_btn"
                style="@style/Button_Layout"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/btn_trailers" />

            <Button
                android:id="@+id/review_btn"
                style="@style/Button_Layout"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/btn_reviews" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_layout"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator_detail"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</ScrollView>